Name:                teams-structure
Version:             0.0
Description:         Package to identify structural results of sequential teams
License:             GPL
License-file:        LICENSE
Author:              Aditya Mahajan
Maintainer:          aditya.mahajan@yale.edu
Build-Type:          Simple
Cabal-Version:       >=1.2
Category:            Algorithms, Stochastic Control
Synopsis:            Find structural results for decentralized team problems
                     using graphical models
Library
   Build-Depends:     base, fgl>=5.4, containers, graphviz>=2009.5.1
   Exposed-modules:   Data.Teams.Graph
   ghc-options:       -Wall
